- removed format parameter, created separate endpoints - improved swagger.yaml - updated JSON output to match new splan version
