# app/controllers/Splan.js
@@ -3,13 +3,36 @@
 var utils = require('../utils/writer.js');
 var Splan = require('../service/SplanService');
 
-module.exports.getSplan = function getSplan(req, res, next) {
+module.exports.getSplanAsIcs = function getSplanAsIcs (req, res, next) {
   var url = req.swagger.params['url'].value;
   var nameformat = req.swagger.params['nameformat'].value;
   var roomformat = req.swagger.params['roomformat'].value;
-  var format = req.swagger.params['format'].value;
+  Splan.getSplanAsIcs(url,nameformat,roomformat)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
 
-  Splan.getSplan(url, nameformat, roomformat, format)
+module.exports.getSplanAsJson = function getSplanAsJson (req, res, next) {
+  var url = req.swagger.params['url'].value;
+  Splan.getSplanAsJson(url)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.getSplanAsPdf = function getSplanAsPdf (req, res, next) {
+  var url = req.swagger.params['url'].value;
+  var nameformat = req.swagger.params['nameformat'].value;
+  var roomformat = req.swagger.params['roomformat'].value;
+  var orientation = req.swagger.params['orientation'].value;
+  Splan.getSplanAsPdf(url,nameformat,roomformat,orientation)
     .then(function (response) {
       utils.writeJson(res, response);
     })
